# oppo

./: CMakeLists.txt  Practic_1.cpp  Practica_2.cpp  Program.cpp  README.md  Version_2.cpp  date1.txt  date2.txt  date3.txt  ОППО__Маслаков.7z
Include/: currency_rate.h  currency_rate_parser.h  currency_rate_repository.h  currency_rate_validator.h
src/: currency_rate.cpp  currency_rate_parser.cpp  currency_rate_repository.cpp  currency_rate_validator.cpp  main.cpp
tests/: test.cpp
